# thumbs

./: .travis.yml  CHANGELOG.md  Cargo.toml  NOTICE  README.md  build.rs  release.toml
.github/workflows/: build.yaml  publish.yaml
ci/: before_deploy.sh
doc/: thumbs.1.md
extra/nautilus/: INSTALL.md  thumbs-nautilus.py
src/: cli.rs  lib.rs  main.rs
