[package]
name = "thumbs"
version = "0.4.4-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2021"
rust-version = "1.57"
description = "A CLI tool to manage the cached thumbnails for files."
documentation = "https://github.com/gourlaysama/thumbs"
homepage = "https://github.com/gourlaysama/thumbs"
repository = "https://github.com/gourlaysama/thumbs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
url = "2"
md5 = "0.7"
log = "0.4"
env_logger = "0.9"
dirs = "4"
walkdir = "2"
globset = "0.4"
png_pong = "0.8"
humantime = "2"
atty = "0.2"

[dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[build-dependencies]
version_check = "0.9"

[profile.release]
lto = true
