[package]
name = "thumbs"
version = "0.4.5-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2021"
rust-version = "1.57"
description = "A CLI tool to manage the cached thumbnails for files."
documentation = "https://github.com/gourlaysama/thumbs"
homepage = "https://github.com/gourlaysama/thumbs"
repository = "https://github.com/gourlaysama/thumbs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
url = "2"
md5 = "0.7"
log = "0.4"
env_logger = "0.9"
dirs = "4"
walkdir = "2"
globset = "0.4"
png_pong = "0.8"
humantime = "2"
atty = "0.2"

[dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[build-dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[build-dependencies]
version_check = "0.9"
serde = { version = "1", features = ["derive"] }
clap_complete = "3"
log = "0.4"
anyhow = "1"
humantime = "2"

[profile.release]
lto = true

[package.metadata.deb]
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-musl/release/thumbs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/thumbs/", "644"],
    ["CHANGELOG.md", "usr/share/doc/thumbs/", "644"],
    ["LICENSE", "usr/share/doc/thumbs/", "644"],
    ["NOTICE", "usr/share/doc/thumbs/", "644"],
    ["extra/nautilus/thumbs-nautilus.py", "use/share/nautilus-python/extensions/", "644"],
    ["thumbs.1.gz", "usr/share/man/man1/thumbs.1.gz", "644"]
]
